test/valid/fc36994_TestAbstract/Concrete.plume
/**
 * For testing abstract
 * @author 36994, César Santos
 */
class Concrete extends Abstract is
  field a : Integer
  field b : Integer
  field c : Integer
  method override sumFields : () -> Integer is
    a + b + c